# zephyr

./: west.yml
.github/workflows/: build_intel_boards.yaml
boards/xtensa/intel_adsp_ace15_mtpm/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  intel_adsp_ace15_mtpm.dts  intel_adsp_ace15_mtpm.yaml  (+2 more)
cmake/emu/: mtlsim.cmake
doc/adsp_mtl/: README.txt  zacewrap.py
drivers/dma/: dma_intel_adsp_gpdma.c
drivers/interrupt_controller/: intc_dw_ace_v1x.c
drivers/ipm/: Kconfig  ipm_cavs_idc.h
drivers/mm/: CMakeLists.txt  Kconfig  mm_drv_common.c  mm_drv_intel_adsp_mtl_tlb.c
drivers/timer/: Kconfig.cavs  ace_v1x_timer.c  intel_adsp_timer.c
soc/xtensa/intel_adsp/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
soc/xtensa/intel_adsp/ace/: power.c
soc/xtensa/intel_adsp/ace_v1x/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  _soc_inthandlers.h  ace-ipc-regs.h  ace_v1x-regs.h  boot.c  cavs-ipc-regs.h  irq.c  linker.ld  mtl-regs.h  mtl.toml  multiprocessing.c  rimage_modules.c  soc.c
soc/xtensa/intel_adsp/ace_v1x/xtensa/config/: tie-asm-mtl.h  tie-asm.h
soc/xtensa/intel_adsp/common/: CMakeLists.txt  boot.c  ipc.c  mem_window.c  sram.c
soc/xtensa/intel_adsp/common/ace/: CMakeLists.txt  asm_memory_management.h  boot.c  power_down.S  rimage_modules.c
soc/xtensa/intel_adsp/common/include/: cavs-idc.h  cavs-ipc-regs.h  intel-adsp-ipc-regs.h  intel_adsp_ipc.h  mem_window.h
soc/xtensa/intel_adsp/mtl/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  irq-mtl.c  mp_mtl.c  mtl-regs.h  soc.c
(+43 files in other folders)
